--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-  <h1>  hello my project 2</h1>
+  <h1>this is my update in branch nass2
+    
+  </h1>
     
 </body>
 </html>
